--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,17 @@
 
     <!-- Allow installing the app to the homescreen -->
     <meta name="mobile-web-app-capable" content="yes" />
+    <!-- <link
+      rel="stylesheet"
+      type="text/css"
+      href="//fonts.googleapis.com/css?family=Lato"
+    /> -->
+
+    <!-- <link
+      rel="stylesheet"
+      type="text/css"
+      href="//fonts.googleapis.com/css?family=Open+Sans"
+    /> -->
 
     <link rel="icon" href="/favicon.ico" />
     <title>React.js Boilerplate</title>
