--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
     >
 
     <!-- The app hooks into this div -->
-    <div id="app"></div>
+    <div id="app" style="font-family: Arial, Helvetica, sans-serif;"></div>
 
     <!-- Open Sans Font -->
     <link
